style.css
/* ... */
/*--------------------------------------------------------------
4.0 Navigation
--------------------------------------------------------------*/
/*--------------------------------------------------------------
4.1 Links
--------------------------------------------------------------*/
a,
a:visited {
	color: #404040;
	text-decoration: none;
}

a:hover,
a:focus,
a:active {
	color: #404040;
}

a:focus {
	outline: thin dotted;
}

a:hover,
a:active {
	outline: 0;
	text-decoration: none;
}

/*--------------------------------------------------------------
4.2 Menus
--------------------------------------------------------------*/
.main-navigation {
	clear: both;
	margin-top: 62px;
	font-size: .8em;
	background: #fff;
}

body.menu-toggled {
	overflow-y: hidden;
}

.menu-toggled .main-navigation {
	height: calc( 100vh - 62px );
	overflow-y: scroll;
	background: rgba(255, 255, 255, .95);
}

.admin-bar.menu-toggled .main-navigation {
	height: calc( 100vh - 46px - 62px );
}

.menu-toggled #header-aside,
.menu-toggled #content {
	-webkit-filter: blur(3px);
	-o-filter: blur(3px);
	filter: blur(3px);
}

.main-navigation .menu {
	display: none;
	float: left;
}

	.site-header .menu a,
	.site-header .menu a:visited,
	.site-header .menu a:focus,
	.site-header .menu a:active {
		color: #404040;
	}

	.site-header .menu a:hover {
		color: rgba(60, 60, 60, .5);
	}

.main-navigation ul {
	display: none;
	list-style: none;
	margin: 0px;
	width: 100%;
	padding: 15px 25px;
}

.menu-toggled .main-navigation .menu {
	display: block;
}

.main-navigation li {
	position: relative;
	width: 100%;
	float: left;
}

	.main-navigation .menu > li:not(:first-child),
	.main-navigation .menu ul li {
		border-top: 1px solid #f1f1f1;
	}

.main-navigation a {
	display: block;
	padding: 10px 0px;
	text-decoration: none;
	font-family: 'Montserrat', Arial, sans-serif;
}

.main-navigation .menu > li > a {
	height: auto;
}

.main-navigation .current_page_item > a,
.main-navigation .current-menu-item > a,
.main-navigation .current_page_parent > a,
.main-navigation .current-menu-parent > a,
.main-navigation .current_page_ancestor > a,
.main-navigation .current-menu-ancestor > a {
	font-weight: bold;
}

.main-navigation .menu-item-has-children > a,
.main-navigation .page_item_has_children > a {
	padding-right: 48px;
}

.main-navigation .menu-item-has-children ul.toggled-on,
.main-navigation .page_item_has_children ul.toggled-on {
	display: block;
	float: left;
	padding: 0px 0px 0px 25px;
}

.no-js .main-navigation ul ul {
	display: block;
}

.dropdown-toggle {
	position: absolute;
	top: 5.5px;
	right: 0px;
	background-color: transparent;
	height: 32px;
	width: 32px;
	padding: 6px;
	border: 0px;
	text-transform: lowercase; /* Stop screen readers to read the text as capital letters */
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}

	.dropdown-toggle:after {
		content: "\f347"; /* dashicons-arrow-down-alt2 */
		display: inline-block;
		width: 20px;
		height: 20px;
		font-size: 20px;
		line-height: 22px;
		font-family: dashicons;
		text-decoration: inherit;
		font-weight: 400;
		font-style: normal;
		vertical-align: top;
		text-align: center;
		-webkit-transition: color .1s ease-in 0;
		transition: color .1s ease-in 0;
		-webkit-font-smoothing: antialiased;
	}

.dropdown-toggle:hover,
.dropdown-toggle:focus {
	background-color: #efefef;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
}

.dropdown-toggle:focus {
	outline: 1px solid #ddd;
}

	.dropdown-toggle.toggle-on:after {
		content: "\f343"; /* dashicons-arrow-up-alt2 */
	}

/* Small menu. */
.menu-toggle {
	position: absolute;
	right: 15px;
	top: 15px;
	width: 32px;
	height: 32px;
	display: block;
	overflow: hidden;
	padding: 5px;
	background-color: transparent;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	box-shadow: none;
	border-radius: 0px;
	color: #fff;
	text-shadow: none;
	line-height: 32px;
	border: 1px solid rgba(255, 255, 255, .3);
}

	.menu-toggle:before {
		content: "\f333"; /* dashicons-menu */
		display: inline-block;
		width: 20px;
		height: 20px;
		font-size: 20px;
		line-height: 20px;
		font-family: dashicons;
		text-decoration: inherit;
		font-weight: 400;
		font-style: normal;
		vertical-align: top;
		text-align: center;
		-webkit-transition: color .1s ease-in 0;
		transition: color .1s ease-in 0;
		-webkit-font-smoothing: antialiased;
	}

		.menu-toggled .main-navigation .menu-toggle:before {
			content: '\f335'; /* dashicons-no-alt */
		}

.main-navigation ul.tools-nav {
	display: block;
	position: absolute;
	top: 15px;
	right: calc( 15px + 32px + 15px );
	width: auto;
	padding: 0px;
}

	.tools-nav li {
		width: auto;
	}

	.tools-nav a {
		width: 32px;
		height: 32px;
		padding: 5px;
		line-height: 32px;
		border: 1px solid rgba(255, 255, 255, .3);
		text-align: center;
	}

		.tools-nav li:first-child a {
			border-right-width: 0px;
		}

		.tools-nav li:last-child a {
			border-left-width: 0px;
		}

		.tools-nav li:hover a {
			border-color: #ccc, #bbb, #aaa;
		}

		.tools-nav li.toggled a,
		.tools-nav li.toggled:hover a {
			background-color: #f9f9f9;
			color: #404040;
		}

		.tools-nav a:before {
			display: inline-block;
			width: 20px;
			height: 20px;
			font-family: dashicons;
			font-size: 20px;
			line-height: 20px;
			vertical-align: top;
		}

		.tools-nav .search-toggle a:before {
			content: '\f179';
		}

		.tools-nav .login-toggle a:before {
			content: '\f160';
		}

			.logged-in .tools-nav .login-toggle a:before {
				content: '\f310';
			}

/* Social Menu */

.menu-toggled .main-navigation .menu-social .menu {
	padding-bottom: 0px;
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: flex;
	justify-content: center;
}

.main-navigation .menu-social ~ .menu-primary .menu {
	padding-top: 0px;
}

.main-navigation .menu-social li {
	width: auto;
}

	.main-navigation .menu-social .menu > li:not(:first-child) {
		border: 0px;
	}
/* ... */

